--- a/tgss/quart/templates/user_info.html
+++ b/tgss/quart/templates/user_info.html
@@ -6,6 +6,8 @@
     <title>User Info</title>
 </head>
 <body>
+    {% include 'header.html' %}
+    
     <h1>User Information</h1>
     <ul>
         <li><strong>ID:</strong> {{ user_info.id }}</li>
